--- a/dataverse-webapp/src/test/resources/xml/export/ddi/codebook-result.html
+++ b/dataverse-webapp/src/test/resources/xml/export/ddi/codebook-result.html
@@ -52,7 +52,7 @@
         --><html>
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Darwin's Finches</title>
+<title>DDI Html CodeBook Test</title>
 <style media="screen" type="text/css">
                     body {
                     background-color: #FFFFFF;
@@ -155,7 +155,7 @@
                 </style>
 </head>
 <body lang="en-US" bgcolor="#ffffff">
-<h1>Darwin's Finches&nbsp;(ICPSR doi:10.5072/FK2/PCA2E3)</h1>
+<h1>DDI Html CodeBook Test&nbsp;(ICPSR doi:10.5072/FK2/XLDMAW)</h1>
 <table cellspacing="0" cellpadding="5" border="0">
 <tr>
 <td valign="top">
@@ -167,6 +167,14 @@
 <a href="?part=1">Part 1: Document Description</a>
 <br>
 <a href="?part=2">Part 2: Study Description</a>
+<br>
+<a href="?part=3">Part 3: Data
+                                        Files Description</a>
+<br>
+<a href="?part=4">Part 4: Variable Description</a>
+<br>
+<a href="?part=5">Part 5: Other
+                                        Study-Related Materials</a>
 <br>
 <a href="?part=0">Entire Codebook</a>
 </p>
@@ -190,28 +198,43 @@
 <td class="h3">
 <p>Title:</p>
 </td><td>
-<p>Darwin's Finches</p>
+<p>DDI Html CodeBook Test</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Identification Number:</p>
 </td><td>
-<p>doi:10.5072/FK2/PCA2E3</p>
+<p>doi:10.5072/FK2/XLDMAW</p>
+</td>
+</tr>
+<tr>
+<td class="h3">
+<p>Distributor:</p>
+</td><td>
+<p>Root</p>
+</td>
+</tr>
+<tr>
+<td class="h3">
+<p>Date of Distribution:</p>
+</td><td>
+<p>2022-09-30</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Version:</p>
 </td><td>
-<p>1</p>
+<p>2</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Bibliographic Citation:</p>
 </td><td>
-<p>Finch, Fiona, 2015, "Darwin's Finches", https://doi.org/10.5072/FK2/PCA2E3,  Root Dataverse,  V1</p>
+<p>Admin, Dataverse, 2022, "DDI Html CodeBook Test", https://doi.org/10.5072/FK2/XLDMAW, Root, V2
+            </p>
 </td>
 </tr>
 <tr class="h1">
@@ -230,49 +253,49 @@
 <td class="h3">
 <p>Title:</p>
 </td><td>
-<p>Darwin's Finches</p>
+<p>DDI Html CodeBook Test</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Identification Number:</p>
 </td><td>
-<p>doi:10.5072/FK2/PCA2E3</p>
+<p>doi:10.5072/FK2/XLDMAW</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Authoring Entity:</p>
 </td><td>
-<p>Finch, Fiona (Birds Inc.)</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Producer:</p>
-</td><td>
-<p>Johnny Hawk</p>
+<p>Admin, Dataverse</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Distributor:</p>
 </td><td>
-<p>Odin Raven</p>
+<p>Root</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Access Authority:</p>
 </td><td>
-<p>Jimmy Finch</p>
+<p>Admin, Dataverse</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Depositor:</p>
 </td><td>
-<p>Added, Depositor</p>
+<p>Admin, Dataverse</p>
+</td>
+</tr>
+<tr>
+<td class="h3">
+<p>Date of Deposit:</p>
+</td><td>
+<p>2022-09-30</p>
 </td>
 </tr>
 <tr class="h2">
@@ -284,72 +307,14 @@
 <td class="h3">
 <p>Keywords:</p>
 </td><td>
-<p>Medicine, Health and Life Sciences, Keyword Value 1, Keyword Value Two</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Topic Classification:</p>
-</td><td>
-<p>TC Value 1</p>
+<p>Other</p>
 </td>
 </tr>
 <tr>
 <td class="h3">
 <p>Abstract:</p>
 </td><td>
-<p>Darwin's finches (also known as the Gal&aacute;pagos finches) are a group of about fifteen species of passerine birds.</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Time Period:</p>
-</td><td>
-<p>20020816-20160630</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Date of Collection:</p>
-</td><td>
-<p>20070831-20130630</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Country:</p>
-</td><td>
-<p>USA</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Geographic Coverage:</p>
-</td><td>
-<p>Cambridge,&nbsp;MA,&nbsp;Other Geographic Coverage</p>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Geographic Bounding Box:</p>
-</td><td>
-<ul>
-<li>
-            West Bounding Longitude: 60.3</li>
-<li>
-            East Bounding Longitude: 59.8</li>
-<li>
-            South Bounding Latitude: 41.6</li>
-<li>
-            North Bounding Latitude: 43.8</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td class="h3">
-<p>Kind of Data:</p>
-</td><td>
-<p>Kind of Data</p>
+<p>&lt;p&gt;Description&lt;/p&gt;</p>
 </td>
 </tr>
 <tr class="h2">
@@ -364,8 +329,158 @@
 </tr>
 <tr class="h2">
 <th colspan="2">
+<p>Data Access</p>
+</th>
+</tr>
+<tr>
+<td class="h3">
+<p>Notes:</p>
+</td><td>
+<p>CC0 Creative Commons Zero 1.0 Waiver</p>
+</td>
+</tr>
+<tr class="h2">
+<th colspan="2">
 <p>Other Study Description Materials</p>
 </th>
+</tr>
+<tr class="h1">
+<th colspan="2">
+<p>
+<a name="3.0">File Description</a>--f2804</p>
+</th>
+</tr>
+<tr class="h2">
+<th colspan="2">
+<p>File: file1.tab</p>
+</th>
+</tr>
+<tr>
+<td></td><td>
+<ul>
+<li>
+<p>Number of cases: 9</p>
+</li>
+<li>
+<p>No. of variables per record: 3</p>
+</li>
+<li>
+<p>Type of File: text/tab-separated-values</p>
+</li>
+</ul>
+</td>
+</tr>
+<tr>
+<td class="h3">
+<p>Notes:</p>
+</td><td>
+<p>UNF:6:BdkLsYcUgoVSazL32HlHjA==
+        </p>
+</td>
+</tr>
+<tr class="h1">
+<th colspan="2">
+<p>
+<a name="a4.0">Variable Description</a>
+</p>
+</th>
+</tr>
+<tr>
+<td class="h3">
+<p>List of Variables:</p>
+</td><td>
+<ul>
+<li>
+<a href="#Column 1">Column 1</a>&nbsp;-&nbsp;Column 1</li>
+<li>
+<a href="#Column 2">Column 2</a>&nbsp;-&nbsp;Column 2</li>
+<li>
+<a href="#Column 3">Column 3</a>&nbsp;-&nbsp;Column 3</li>
+</ul>
+</td>
+</tr>
+<tr class="h2">
+<td colspan="2">
+<p>
+<strong>Variables</strong>
+</p>
+</td>
+</tr>
+<tr>
+<th colspan="2">
+<p>
+<a name="Column 1"></a><a id="v34405"></a>Column 1</p>
+</th>
+</tr>
+<tr>
+<td valign="top">
+<p class="small">f2804&nbsp;Location:</p>
+<p class="small"></p>
+</td><td valign="top">
+<p>Variable Format: character</p>
+<p>
+            Notes: 
+                UNF:6:xnEppil7GJU7gAV8RcZROg==
+            </p>
+</td>
+</tr>
+<tr>
+<th colspan="2">
+<p>
+<a name="Column 2"></a><a id="v34403"></a>Column 2</p>
+</th>
+</tr>
+<tr>
+<td valign="top">
+<p class="small">f2804&nbsp;Location:</p>
+<p class="small"></p>
+</td><td valign="top">
+<p>Summary Statistics: Valid 9.0; StDev 32.21455847559885; Mean 52.44444444444444; Min. 1.0; Max. 90.0; </p>
+<p>Variable Format: numeric</p>
+<p>
+            Notes: 
+                UNF:6:S+8VWOCZizYAE8cBEytMHQ==
+            </p>
+</td>
+</tr>
+<tr>
+<th colspan="2">
+<p>
+<a name="Column 3"></a><a id="v34404"></a>Column 3</p>
+</th>
+</tr>
+<tr>
+<td valign="top">
+<p class="small">f2804&nbsp;Location:</p>
+<p class="small"></p>
+</td><td valign="top">
+<p>Variable Format: character</p>
+<p>
+            Notes: 
+                UNF:6:Qay50i0afa24c8lmGP+/0A==
+            </p>
+</td>
+</tr>
+<tr>
+<th colspan="2" align="left">
+<p>
+<a name="f2793"></a><a name="5.0">Other Study-Related Materials</a>
+</p>
+</th>
+</tr>
+<tr>
+<td valign="top" align="right">
+<p>Label:</p>
+</td><td>
+<p>Data.pdf</p>
+</td>
+</tr>
+<tr>
+<td class="h3">
+<p>Notes:</p>
+</td><td>
+<p>application/pdf</p>
+</td>
 </tr>
 </table>
 </body>
