--- a/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
+++ b/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
@@ -239,6 +239,22 @@
                             </p:fragment>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-6 form-group form-col-container">
+                            <div class="col-sm-3">
+                                <div class="control-label section-title">
+                                    #{bundle.description}
+                                </div>
+                                <span class="glyphicon glyphicon-question-sign tooltip-icon" tabindex="0" role="button"
+                                        aria-label="#{bundle['common.forms.field.tooltip.ariaLabel']} #{bundle['description']}"
+                                        data-toggle="tooltip" data-placement="auto right"
+                                        data-original-title="#{bundle['dataverse.description.title']}"></span>
+                            </div>
+                            <div class="col-sm-9 form-col-container">
+                                <p:inputTextarea value="#{CreateEditDataversePage.dataverse.description}" id="textbox" rows="5" cols="60" styleClass="form-control" />
+                            </div>
+                        </div>
+                    </div>
 
                     <hr class="margin-top-half margin-bottom-half"/>
 
