--- a/dataverse-webapp/src/main/webapp/dataverse_template.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse_template.xhtml
@@ -41,7 +41,7 @@
 
         <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;display=swap" />
         <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&amp;display=swap" />
-
+        <link type="text/css" rel="stylesheet" href="#{resource['leaflet/leaflet.css']}" />
         <ui:fragment rendered="#{!empty settingsWrapper.getSettingValue(':StyleCustomizationFile')}">
             <style>
                 /* Custom CSS */
