--- a/dataverse-webapp/src/main/webapp/dataverse_template.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse_template.xhtml
@@ -51,6 +51,11 @@
     </h:head>
     <h:body styleClass="#{widgetWrapper.widgetView ? 'widget-view' : ''}">
         <script src="#{resource['js/dv_accessibility.js']}?version=#{systemConfig.getVersionWithBuild()}"></script>
+        <script src="#{resource['leaflet/leaflet.js']}"></script>
+        <script src="#{resource['js/drodb.js']}"></script>
+        <script>
+            window.Drodb = window.Drodb || initDrodb()
+        </script>
         <div id="body-wrapper">
             <f:loadBundle basename="Bundle" var="bundle"/>
         <a href="#content" class="sr-only impaired-navigation">#{bundle['body.skip']}</a>
