--- a/dataverse-webapp/src/main/webapp/viewMetadataField.xhtml
+++ b/dataverse-webapp/src/main/webapp/viewMetadataField.xhtml
@@ -26,9 +26,9 @@
                                 escape="false"/>
                 </ui:repeat>
                 <c:set var="isGeospatial" value="#{datasetField.datasetFieldType.fieldType eq FieldType.GEOBOX}"/>
-                <c:set var="currentGsIndex" value="map_#{mdBlockName}_#{fieldsLoop.index}"/>
+                <c:set var="currentGsIndex" value="map_#{mdBlockName}_#{fieldIndex}_#{fieldsLoop.index}"/>
                 <script jsf:rendered="#{isGeospatial}">
-                        Drodb.Geo.MetadataView.prepare('#{currentGsIndex}');
+                        DvJS.Geo.MetadataView.prepare('#{currentGsIndex}');
                 </script>
                 <ui:repeat var="childField" value="#{datasetField.datasetFieldsChildren}" varStatus="childLoop">
                     <div jsf:rendered="#{childField.parentDisplayFormatIsNewLine}">
@@ -38,7 +38,7 @@
                             </ui:repeat>
                     </div>
                     <script jsf:rendered="#{isGeospatial}">
-                        Drodb.Geo.MetadataView.pushValue('#{currentGsIndex}', Number('#{childField.value}'));
+                        DvJS.Geo.MetadataView.pushValue('#{currentGsIndex}', Number('#{childField.value}'));
                     </script>
                     <h:outputText value="#{childField.parentDisplayFormat} " rendered="#{!childLoop.first and !childField.parentDisplayFormatIsNewLine}" escape="false" />
                     <ui:repeat value="#{childField.values}" var="value" varStatus="valuesLoop">
