--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -61,6 +61,8 @@
                         <f:viewAction action="#{MyDataSearchFragment.retrieveMyData()}" if="#{param.editMode ne 'CREATE'}"/>
 
                 </f:metadata>
+                <o:importConstants type="edu.harvard.iq.dataverse.authorization.EditableAccountField"
+                                   var="editableField"/>
                 <h:form id="dataverseUserForm">
                     <p:focus context="dataverseUserForm"/>
 
@@ -619,7 +621,9 @@
                                               data-toggle="tooltip" data-placement="auto right" data-original-title="#{bundle['user.firstName.tip']}"></span>
                                     </label>
                                     <div class="col-sm-4">
-                                        <p:inputText id="firstName" styleClass="form-control" value="#{DataverseUserPage.userDisplayInfo.firstName}" />
+                                        <p:inputText id="firstName" styleClass="form-control"
+                                                     value="#{DataverseUserPage.userDisplayInfo.firstName}"
+                                                     disabled="#{DataverseUserPage.isDisabledForEdit(editableField.NAME)}"/>
                                         <p:message for="firstName" display="text" />
                                     </div>
                                 </div>
@@ -631,7 +635,9 @@
                                               data-toggle="tooltip" data-placement="auto right" data-original-title="#{bundle['user.lastName.tip']}"></span>
                                     </label>
                                     <div class="col-sm-4">
-                                        <p:inputText id="lastName" styleClass="form-control" value="#{DataverseUserPage.userDisplayInfo.lastName}" />
+                                        <p:inputText id="lastName" styleClass="form-control"
+                                                     value="#{DataverseUserPage.userDisplayInfo.lastName}"
+                                                     disabled="#{DataverseUserPage.isDisabledForEdit(editableField.FAMILY_NAME)}"/>
                                         <p:message for="lastName" display="text" />
                                     </div>
                                 </div>
@@ -645,7 +651,8 @@
                                     <div class="col-sm-4">
                                         <p:inputText id="email" styleClass="form-control"
                                                      validator="#{DataverseUserPage.validateUserEmail}"
-                                                     value="#{DataverseUserPage.userDisplayInfo.emailAddress}" />
+                                                     value="#{DataverseUserPage.userDisplayInfo.emailAddress}"
+                                                     disabled="#{DataverseUserPage.isDisabledForEdit(editableField.EMAIL)}"/>
                                         <p:message for="email" display="text" />
                                     </div>
                                 </div>
@@ -674,7 +681,9 @@
                                               data-toggle="tooltip" data-placement="auto right" data-original-title="#{bundle['user.affiliation.tip']}"></span>
                                     </label>
                                     <div class="col-sm-4">
-                                        <p:inputText id="affiliation" styleClass="form-control" value="#{DataverseUserPage.userDisplayInfo.affiliation}" />
+                                        <p:inputText id="affiliation" styleClass="form-control"
+                                                     value="#{DataverseUserPage.userDisplayInfo.affiliation}"
+                                                     disabled="#{DataverseUserPage.isDisabledForEdit(editableField.AFFILIATION)}"/>
                                         <p:message for="affiliation" display="text" />
                                     </div>
                                 </div>
@@ -686,7 +695,9 @@
                                               data-toggle="tooltip" data-placement="auto right" data-original-title="#{bundle['user.position.tip']}"></span>
                                     </label>
                                     <div class="col-sm-4">
-                                        <p:inputText id="position" styleClass="form-control" value="#{DataverseUserPage.userDisplayInfo.position}" />
+                                        <p:inputText id="position" styleClass="form-control"
+                                                     value="#{DataverseUserPage.userDisplayInfo.position}"
+                                                     disabled="#{DataverseUserPage.isDisabledForEdit(editableField.POSITION)}"/>
                                         <p:message for="position" display="text" />
                                     </div>
                                 </div>
@@ -700,11 +711,10 @@
                                     </label>
                                     <div class="col-sm-4">
                                         <p:selectOneMenu styleClass="facet-category-default"
-                                                         disabled="#{false}"
                                                          validator="#{DataverseUserPage.validatePreferredNotificationsLanguage}"
                                                          value="#{DataverseUserPage.preferredNotificationsLanguage}"
-                                                         rendered="#{DataverseUserPage.editMode ne 'CREATE'}"
-                                        >
+                                                         disabled="#{DataverseUserPage.isDisabledForEdit(editableField.NOTIFICATIONS_LANG)}"
+                                                         rendered="#{DataverseUserPage.editMode ne 'CREATE'}">
                                             <f:selectItems value="#{DataverseUserPage.getSupportedLanguages()}"
                                                            var="language"
                                                            itemLabel="#{DataverseUserPage.getLocalizedDisplayNameForLanguage(language)}"
