--- a/dataverse-webapp/src/main/webapp/firstLogin.xhtml
+++ b/dataverse-webapp/src/main/webapp/firstLogin.xhtml
@@ -124,8 +124,8 @@
                                 </label>
                                 <div class="col-sm-4">
                                     <p:inputText id="orcid" styleClass="form-control"
-                                                 value="#{ExternalIdpFirstLoginPage.newUser.displayInfo.orcId}"
-                                                 validator="#{ExternalIdpFirstLoginPage.validateOrcId}"/>
+                                                 value="#{ExternalIdpFirstLoginPage.newUser.displayInfo.orcid}"
+                                                 validator="#{ExternalIdpFirstLoginPage.validateOrcid}"/>
                                     <p:message for="orcid" display="text" />
                                 </div>
                             </div>
