--- a/dataverse-webapp/src/main/webapp/dataverse-textMessages.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse-textMessages.xhtml
@@ -5,6 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:p="http://primefaces.org/ui">
 <f:view locale="#{dataverseSession.localeCode}"/>
 <h:head>
@@ -115,7 +116,7 @@
                                             <p:graphicImage style="padding: 2px" stream="false" id="banner-thumbnail" styleClass="banner-mini-preview"
                                                             value="#{BannerTab.getDisplayImage(localbanner)}" />
                                         </div>
-                                        <div class="p-col" lang="#{localbanner.locale}">
+                                        <div class="p-col" lang="#{localbanner.locale}" jsf:rendered="#{localbanner.imageLink != ''}">
                                             <span class="section-title" style="margin-right: 10px">
                                                 #{settingsWrapper.getConfiguredLocaleName(localbanner.locale)} - Link: 
                                             </span>
